--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,14 @@ dependencies = [
   "numpy>=2.2.6",
 ]
 
+[build-system]
+requires = ["setuptools>=61"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["celine.dt*"]
+
 [tool.ruff]
 line-length = 100
 target-version = "py310"
