--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -4,7 +4,7 @@ tasks:
   run:
     desc: Run
     cmds:
-      - uv run uvicorn dt.main:create_app --reload
+      - uv run uvicorn celine.dt.main:create_app --reload
   test:
     desc: Run tests
     cmds:
