--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
   "python-json-logger>=2.0.7",
   "pandas>=2.3.3",
   "numpy>=2.2.6",
+  "psycopg[binary]>=3.3.2",
 ]
 
 [build-system]
