add alembic, add compose

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=dev
 LOG_LEVEL=INFO
 
 # Local DT DB (PoC)
-DATABASE_URL=sqlite:///./celine_dt.db
+DATABASE_URL=postgresql+psycopg://postgres:postgres@172.17.0.1:5432/postgres
 
 # Dataset API (default instance)
 DATASET_API_BASE_URL=http://localhost:8081
