--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -19,3 +19,20 @@ tasks:
   dump-source:
     cmds:
       - uv run python scripts/dump_source.py
+
+  alembic:migrate:
+    desc: "Run migrations"
+    cmds:
+      - uv run alembic upgrade head
+
+  alembic:sync-model:
+    desc: "Create new revision"
+    cmds:
+      - uv run alembic revision --autogenerate -m \"$MSG\"
+    vars:
+      MSG: "update model"
+
+  alembic:reset:
+    desc: "Reset DB schema"
+    cmds:
+      - uv run alembic downgrade base
