--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "numpy>=2.2.6",
   "psycopg[binary]>=3.3.2",
   "asyncpg>=0.31.0",
+  "jsonschema>=4.26.0",
 ]
 
 [build-system]
