--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
   "psycopg[binary]>=3.3.2",
   "asyncpg>=0.31.0",
   "jsonschema>=4.26.0",
+  "aiomqtt>=2.5.0",
 ]
 
 [build-system]
