--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
   "asyncpg>=0.31.0",
   "jsonschema>=4.26.0",
   "aiomqtt>=2.5.0",
+  "pyarrow>=23.0.0",
+  "fastparquet>=2025.12.0",
 ]
 
 [build-system]
