--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -5,10 +5,12 @@ tasks:
     desc: Run
     cmds:
       - uv run uvicorn celine.dt.main:create_app --reload  --host 0.0.0.0 --port 8002
+
   debug:
     desc: "Run development server with debugger"
     cmds:
-      - DEBUG_ATTACH=1 uv run uvicorn celine.dt.main:create_app --reload --host 0.0.0.0 --port 8002
+      - DEBUG_ATTACH=nowait DEBUG_PORT=48002 uv run uvicorn celine.dt.main:create_app --reload --host 0.0.0.0 --port 8002
+
   test:
     desc: Run tests
     cmds:
@@ -19,10 +21,6 @@ tasks:
       - uv run semantic-release -v version --no-vcs-release
       - git push
       - git push --tags
-
-  dump-source:
-    cmds:
-      - uv run dumpster-cli
 
   alembic:migrate:
     desc: "Run migrations"
