--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
-    "python.analysis.extraPaths": [
-        "celine"
-    ],
     "python.analysis.diagnosticMode": "workspace",
+    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "python.analysis.extraPaths": [
+        "src/celine",
+        "../celine-sdk/src",
+    ],
+    "python.analysis.autoSearchPaths": true,
 }
