--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
     "python.analysis.diagnosticMode": "workspace",
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+    "python.defaultInterpreterPath": ".venv/bin/python",
+    "python.analysis.autoSearchPaths": true,
     "python.analysis.extraPaths": [
         "src/celine",
         "../celine-sdk/src",
     ],
-    "python.analysis.autoSearchPaths": true,
 }
