feat: extend domain, support rec registry, extend broker

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,31 @@
-# Server
+# ── Application ─────────────────────────────────────────────
 APP_ENV=dev
 LOG_LEVEL=INFO
 
-# Local DT DB (PoC)
-DATABASE_URL=postgresql+psycopg://postgres:postgres@172.17.0.1:5432/postgres
+# ── OIDC (outgoing client-credentials + incoming JWT) ──────
+OIDC_TOKEN_BASE_URL=http://keycloak.celine.localhost/realms/celine
+OIDC_CLIENT_ID=celine-dt
+OIDC_CLIENT_SECRET=celine-dt
+OIDC_CLIENT_SCOPE=dataset.query
+OIDC_VERIFY_JWT=false
+OIDC_JWKS_URI=
 
-# Dataset API (default instance)
-DATASET_API_BASE_URL=http://localhost:8081
-DATASET_API_TOKEN=
+# ── MQTT Broker ────────────────────────────────────────────
+MQTT_HOST=172.17.0.1
+MQTT_PORT=1883
+MQTT_TOPIC_PREFIX=celine/dt/
+MQTT_USE_TLS=false
+# Static credentials (ignored when OIDC is configured):
+# MQTT_USERNAME=
+# MQTT_PASSWORD=
 
-# Optional: materialization defaults
-DEFAULT_GRANULARITY=15m
+# ── Dataset API ────────────────────────────────────────────
+DATASET_API_URL=http://localhost:8001
+
+# ── Config file paths (override defaults) ──────────────────
+# DOMAINS_CONFIG_PATHS=["config/domains.yaml"]
+# CLIENTS_CONFIG_PATHS=["config/clients.yaml"]
+# BROKERS_CONFIG_PATHS=["config/brokers.yaml"]
+
+# ── Simulation workspaces ──────────────────────────────────
+# DT_WORKSPACE_ROOT=dt_workspaces
