--- a/dump.yaml
+++ b/dump.yaml
@@ -1,15 +1,48 @@
-contents:
-  - .github
-  - src
-  - config
-  - migrations
-  - ontologies
-  - tests
-  - scripts
-  - docs
-  - .dockerignore
-  - .env.example
-  - Dockerfile
-  - pyproject.toml
-  - README.md
-  - taskfile.yaml
+extensions:
+  - .py
+  - .md
+  - .json
+  - .yaml
+  - .yml
+  - .toml
+
+dumps:
+  - name: all
+    contents:
+      - .github
+      - src
+      - config
+      - migrations
+      - ontologies
+      - tests
+      - scripts
+      - docs
+      - .dockerignore
+      - .env.example
+      - Dockerfile
+      - pyproject.toml
+      - README.md
+      - taskfile.yaml
+
+  - name: dt
+    contents:
+      - src
+      - tests
+      - config
+      - migrations
+      - README.md
+      - pyproject.toml
+
+  - name: ops
+    contents:
+      - .github
+      - ontologies
+      - .env.example
+      - Dockerfile
+      - docker-compose.yaml
+      - taskfile.yaml
+
+  - name: docs
+    contents:
+      - README.md
+      - docs
