--- a/config/brokers.yaml
+++ b/config/brokers.yaml
@@ -13,7 +13,7 @@ brokers:
     enabled: true
     auth_with_token: true
     config:
-      host: "${MQTT_HOST:-localhost}"
+      host: "${MQTT_HOST:-172.17.0.1}"
       port: "${MQTT_PORT:-1883}"
       topic_prefix: "${MQTT_TOPIC_PREFIX:-celine/dt/}"
       use_tls: "${MQTT_USE_TLS:-false}"
