--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,57 +5,18 @@ volumes:
   postgres_data:
 
 services:
-  postgres:
-    image: postgres:17.4
-    container_name: celine-dt-postgres
-    restart: unless-stopped
-    networks:
-      - celine_dt
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-
   dt:
-    container_name: celine-dt
     build:
       context: .
       dockerfile: Dockerfile
-      target: dev
-    depends_on:
-      postgres:
-        condition: service_healthy
     networks:
       - celine_dt
-    environment:
-      APP_ENV: dev
-      LOG_LEVEL: DEBUG
-      DATABASE_URL: postgresql+asyncpg://postgres:postgres@postgres:5432/postgres
     volumes:
-      - ./celine:/app/celine
-      - ./config:/app/config
-      - ./ontologies:/app/ontologies
-      - ./migrations:/app/migrations
-      - ./pyproject.toml:/app/pyproject.toml
+      - ./config:/app/config:ro
     ports:
       - "8002:8002"
-      - "48002:5679"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
       interval: 10s
       timeout: 3s
       retries: 5
-    command: >
-      uvicorn celine.dt.main:create_app
-      --host 0.0.0.0
-      --port 8002
-      --reload
