feat: detach on_event from DTDomain

--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -9,7 +9,7 @@ tasks:
   debug:
     desc: "Run development server with debugger"
     cmds:
-      - DEBUG_ATTACH=nowait DEBUG_PORT=48002 uv run uvicorn celine.dt.main:create_app --reload --host 0.0.0.0 --port 8002
+      - LOG_LEVEL=DEBUG DEBUG_ATTACH=nowait DEBUG_PORT=48002 uv run uvicorn celine.dt.main:create_app --reload --host 0.0.0.0 --port 8002
 
   test:
     desc: Run tests
