fix: review docker setup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,32 @@
-networks:
-  celine_dt:
-
-volumes:
-  postgres_data:
-
 services:
   dt:
     build:
       context: .
       dockerfile: Dockerfile
-    networks:
-      - celine_dt
-    volumes:
-      - ./config:/app/config:ro
     ports:
       - "8002:8002"
+    environment:
+      MQTT_HOST: "172.17.0.1"
+      MQTT_PORT: "1883"
+      MQTT_USE_TLS: "false"
+      DATASET_API_BASE_URL: "http://api.celine.localhost/datasets"
+      REC_REGISTRY_URL: "http://api.celine.localhost/rec-registry"
+      NUDGING_URL: "http://api.celine.localhost/nudging"
+    volumes:
+      - ./config:/app/config:ro
+      - dt_workspaces:/app/dt_workspaces
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8002/health"]
+      test:
+        [
+          "CMD-SHELL",
+          'python -c "import urllib.request; urllib.request.urlopen(''http://localhost:8002/health'').read()"',
+        ]
       interval: 10s
       timeout: 3s
       retries: 5
     extra_hosts:
       - "keycloak.celine.localhost:172.17.0.1"
       - "api.celine.localhost:172.17.0.1"
+
+volumes:
+  dt_workspaces:
