--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,15 +23,16 @@ dependencies = [
   "pyarrow>=23.0.0",
   "fastparquet>=2025.12.0",
   "celine-sdk>=1.1.0",
+  "jinja2>=3.1.6",
 ]
 
 [build-system]
-requires = ["setuptools>=61"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools.packages.find]
-where = ["src"]
-include = ["celine.dt*"]
+[tool.hatch.build.targets.wheel]
+only-include = ["src/celine/dt"]
+sources = {"src" = ""}
 
 [tool.ruff]
 line-length = 100
